--- a/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
+++ b/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
@@ -1,6 +1,6 @@
 <div class="page" style="background-color: #f5eddc; padding: 20px; border-radius: 10px;">
 
-  <h1>Our Mission</h1>
+  <h1>Evangelisti Digital Archive</h1>
   
   <p>Our Vision </p>
 
