test modifica titolo

--- a/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2FTest_tree_advanced.html
+++ b/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2FTest_tree_advanced.html
@@ -266,9 +266,9 @@
     }
   </style>
   
-  <h1>Evangelisti Digital Archive Tree</h1>
+  <h1>Valerio Evangelisti Archive</h1>
   
-  <p>... </p>
+  <p>Explore the file system and navigate through its hierarchical structure, discovering related actors, events, places, objects, and concepts interconnected within the archive</p>
 
   
   <!-- Two-column layout -->
